--- a/Tournament/packages.config
+++ b/Tournament/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.3.7" targetFramework="net472" />
+  <package id="elmah.corelibrary" version="1.2" targetFramework="net472" />
+  <package id="Elmah.Mvc" version="2.1.2" targetFramework="net472" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net472" />
@@ -18,9 +21,13 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net472" />
+  <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.WebForms" version="150.900.148" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
+  <package id="ReportViewerForMvc" version="1.1.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
