Got login and elman to work

--- a/Tournament/Web.config
+++ b/Tournament/Web.config
@@ -28,6 +28,9 @@
     <add key="elmah.mvc.UserAuthCaseSensitive" value="true" />
   </appSettings>
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Accounts/Login" timeout="2880" />
+    </authentication>
     <compilation debug="true" targetFramework="4.7.2">
       <buildProviders>
         <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
@@ -119,7 +122,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="TournamentEntities" connectionString="metadata=res://*/Models.TournamentModel.csdl|res://*/Models.TournamentModel.ssdl|res://*/Models.TournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Tournament;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="elman" connectionString="data source=localhost;initial catalog=Tournament;integrated security=True" providerName="System.Data.EntityClient"/>
+    <add name="elmah" connectionString="data source=localhost;initial catalog=Tournament;integrated security=True" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <elmah>
     <security allowRemoteAccess="1" />
