--- a/Tournament/Tournament.csproj
+++ b/Tournament/Tournament.csproj
@@ -242,6 +242,11 @@
       <DependentUpon>TournamentModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportFiles\TournamentDS.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TournamentDS.xsd</DependentUpon>
+    </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -275,6 +280,17 @@
     </EntityDeploy>
     <Content Include="Models\TournamentModel.edmx.diagram">
       <DependentUpon>TournamentModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="ReportFiles\TournamentDS.xsc">
+      <DependentUpon>TournamentDS.xsd</DependentUpon>
+    </Content>
+    <None Include="ReportFiles\TournamentDS.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TournamentDS.Designer.cs</LastGenOutput>
+    </None>
+    <Content Include="ReportFiles\TournamentDS.xss">
+      <DependentUpon>TournamentDS.xsd</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -325,6 +341,7 @@
     <Content Include="Views\Teams\Delete.cshtml" />
     <Content Include="Views\Teams\Edit.cshtml" />
     <Content Include="Views\Teams\Index.cshtml" />
+    <Content Include="Views\Teams\TeamReport.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -345,6 +362,11 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ReportFiles\SingleTeams.rdlc" />
+    <EmbeddedResource Include="ReportFiles\PairsTeams.rdlc" />
+    <EmbeddedResource Include="ReportFiles\TriplesTeams.rdlc" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
