--- a/Tournament/Tournament.csproj
+++ b/Tournament/Tournament.csproj
@@ -192,6 +192,8 @@
     <Compile Include="App_Start\ElmahMVCErrorFilter.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Code\CalculateStandings.cs" />
+    <Compile Include="Code\CreateSchedule.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ElmahController.cs" />
     <Compile Include="Controllers\ElmanResult.cs" />
@@ -199,50 +201,13 @@
     <Compile Include="Controllers\PlayersController.cs" />
     <Compile Include="Controllers\SchedulesController.cs" />
     <Compile Include="Controllers\TeamsController.cs" />
+    <Compile Include="Controllers\MatchesController.cs" />
+    <Compile Include="Extensions\HtmlHelperExtension.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\ELMAH_Error.cs">
-      <DependentUpon>TournamentModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Fact.cs">
-      <DependentUpon>TournamentModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\GetMatchAll_Result.cs">
-      <DependentUpon>TournamentModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\LogUserViewModel.cs" />
-    <Compile Include="Models\Match.cs">
-      <DependentUpon>TournamentModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\MetaData.cs" />
-    <Compile Include="Models\Player.cs">
-      <DependentUpon>TournamentModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Schedule.cs">
-      <DependentUpon>TournamentModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Team.cs">
-      <DependentUpon>TournamentModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\TournamentModel.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TournamentModel.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\TournamentModel.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TournamentModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\TournamentModel.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TournamentModel.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Models\User.cs">
-      <DependentUpon>TournamentModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportFiles\TournamentDS.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -256,32 +221,16 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\uparrow.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Models\TournamentModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>TournamentModel.edmx</DependentUpon>
-      <LastGenOutput>TournamentModel.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Models\TournamentModel.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>TournamentModel.edmx</DependentUpon>
-      <LastGenOutput>TournamentModel.cs</LastGenOutput>
-    </Content>
     <Content Include="ReportViewerWebForm.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <EntityDeploy Include="Models\TournamentModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>TournamentModel.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\TournamentModel.edmx.diagram">
-      <DependentUpon>TournamentModel.edmx</DependentUpon>
     </Content>
     <Content Include="ReportFiles\TournamentDS.xsc">
       <DependentUpon>TournamentDS.xsd</DependentUpon>
@@ -349,6 +298,11 @@
     <Content Include="Views\Schedules\Details.cshtml" />
     <Content Include="Views\Schedules\Edit.cshtml" />
     <Content Include="Views\Schedules\Index.cshtml" />
+    <Content Include="Views\Matches\ClearSchedule.cshtml" />
+    <Content Include="Views\Matches\Create.cshtml" />
+    <Content Include="Views\Matches\CreateMatches.cshtml" />
+    <Content Include="Views\Matches\Index.cshtml" />
+    <Content Include="Views\Matches\Scoring.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
