--- a/Tournament/Tournament.csproj
+++ b/Tournament/Tournament.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ChangePasswordViewModel.cs" />
     <Compile Include="Models\Forfeit.cs" />
     <Compile Include="Models\GetMatchAll_Result.cs">
       <DependentUpon>TournamentModel.tt</DependentUpon>
@@ -225,6 +226,7 @@
     <Compile Include="Models\Player.cs">
       <DependentUpon>TournamentModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Role.cs" />
     <Compile Include="Models\Schedule.cs">
       <DependentUpon>TournamentModel.tt</DependentUpon>
     </Compile>
@@ -366,7 +368,6 @@
     <Content Include="Views\Matches\ByesReport.cshtml" />
     <Content Include="Views\Users\Create.cshtml" />
     <Content Include="Views\Users\Delete.cshtml" />
-    <Content Include="Views\Users\Details.cshtml" />
     <Content Include="Views\Users\Edit.cshtml" />
     <Content Include="Views\Users\Index.cshtml" />
     <Content Include="Views\Home\Welcome.cshtml" />
@@ -379,6 +380,8 @@
     <Content Include="Views\UserLeagues\Edit.cshtml" />
     <Content Include="Views\UserLeagues\Index.cshtml" />
     <Content Include="Views\Matches\ScoreCardReport.cshtml" />
+    <Content Include="Views\Accounts\ChangePassword.cshtml" />
+    <Content Include="Views\Accounts\PasswordAccepted.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
