--- a/Tournament/Tournament.csproj
+++ b/Tournament/Tournament.csproj
@@ -194,6 +194,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Code\CalculateStandings.cs" />
     <Compile Include="Code\CreateSchedule.cs" />
+    <Compile Include="Code\Secret.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ElmahController.cs" />
     <Compile Include="Controllers\ElmanResult.cs" />
@@ -211,6 +212,7 @@
     </Compile>
     <Compile Include="Models\ChangePasswordViewModel.cs" />
     <Compile Include="Models\Forfeit.cs" />
+    <Compile Include="Models\ForgotPasswordViewModel.cs" />
     <Compile Include="Models\GetMatchAll_Result.cs">
       <DependentUpon>TournamentModel.tt</DependentUpon>
     </Compile>
@@ -226,6 +228,7 @@
     <Compile Include="Models\Player.cs">
       <DependentUpon>TournamentModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ResetPasswordViewModel.cs" />
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\Schedule.cs">
       <DependentUpon>TournamentModel.tt</DependentUpon>
@@ -382,6 +385,9 @@
     <Content Include="Views\Matches\ScoreCardReport.cshtml" />
     <Content Include="Views\Accounts\ChangePassword.cshtml" />
     <Content Include="Views\Accounts\PasswordAccepted.cshtml" />
+    <Content Include="Views\Accounts\ForgotPassword.cshtml" />
+    <Content Include="Views\Accounts\ResetPassword.cshtml" />
+    <Content Include="Views\Accounts\SentEmail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
