fixed some errors

--- a/Tournament/Web.config
+++ b/Tournament/Web.config
@@ -133,7 +133,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="TournamentEntities" connectionString="metadata=res://*/Models.TournamentModel.csdl|res://*/Models.TournamentModel.ssdl|res://*/Models.TournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=localhost;Initial Catalog=Tournament;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TournamentEntities" connectionString="metadata=res://*/Models.TournamentModel.csdl|res://*/Models.TournamentModel.ssdl|res://*/Models.TournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;Initial Catalog=Tournament;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="elmah" connectionString="data source=localhost;initial catalog=Tournament;integrated security=True" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <elmah>
