--- a/Tournament/packages.config
+++ b/Tournament/packages.config
@@ -3,12 +3,11 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.3.7" targetFramework="net472" />
   <package id="bootstrap.less" version="3.3.5" targetFramework="net472" />
-  <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net472" />
-  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net472" />
   <package id="elmah.corelibrary" version="1.2" targetFramework="net472" />
   <package id="Elmah.Mvc" version="2.1.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
+  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net472" />
