cleaned up permissions and login

--- a/Tournament/Tournament.csproj
+++ b/Tournament/Tournament.csproj
@@ -538,6 +538,7 @@
     <Content Include="Views\Membership\Edit.cshtml" />
     <Content Include="Views\Membership\Index.cshtml" />
     <Content Include="Views\Shared\_LeagueLayout.cshtml" />
+    <Content Include="Views\Shared\_LoginLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
