removed hard coding for mailer

--- a/Tournament/Web.config
+++ b/Tournament/Web.config
@@ -14,6 +14,7 @@
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup></configSections>
   <appSettings>
+    <add key="smtp" value="smtp.ionos.com"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
