--- a/Tournament/Web.Release.config
+++ b/Tournament/Web.Release.config
@@ -7,13 +7,16 @@
     In the example below, the "SetAttributes" transform will change the value of
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
     finds an attribute "name" that has a value of "MyDB".
-
-    <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
   -->
+    <connectionStrings>
+      <add name="TournamentEntities"
+        connectionString="metadata=res://*/Models.TournamentModel.csdl|res://*/Models.TournamentModel.ssdl|res://*/Models.TournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:frickparkserver.database.windows.net,1433;Initial Catalog=TournamentDB;Persist Security Info=False;User ID=AdminUser;Password=burnt#end1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+      <add name="elmah"
+           connectionString="Server=tcp:frickparkserver.database.windows.net,1433;Initial Catalog=TournamentDB;Persist Security Info=False;User ID=AdminUser;Password=burnt#end1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+           xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    </connectionStrings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
