--- a/Tournament/Web.Release.config
+++ b/Tournament/Web.Release.config
@@ -10,7 +10,7 @@
   -->
     <connectionStrings>
       <add name="TournamentEntities"
-        connectionString="metadata=res://*/Models.TournamentModel.csdl|res://*/Models.TournamentModel.ssdl|res://*/Models.TournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:frickparkserver.database.windows.net,1433;Initial Catalog=TournamentDB;Persist Security Info=False;User ID=AdminUser;Password=burnt#end1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+           connectionString="metadata=res://*/Models.TournamentModel.csdl|res://*/Models.TournamentModel.ssdl|res://*/Models.TournamentModel.msl;provider=System.Data.SQlClient;provider connection string='Data Source=tcp:frickparkserver.database.windows.net,1433;Initial Catalog=TournamentDB;Persist Security Info=False;User ID=AdminUser;Password=burnt#end1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;MultipleActiveResultSets=True;App=EntityFramework'"
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
       <add name="elmah"
            connectionString="Server=tcp:frickparkserver.database.windows.net,1433;Initial Catalog=TournamentDB;Persist Security Info=False;User ID=AdminUser;Password=burnt#end1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
