--- a/Tournament/Web.config
+++ b/Tournament/Web.config
@@ -142,10 +142,10 @@
   </entityFramework>
   <connectionStrings>
     <add name="TournamentEntities"
-         connectionString="metadata=res://*/Models.TournamentModel.csdl|res://*/Models.TournamentModel.ssdl|res://*/Models.TournamentModel.msl;provider=System.Data.SQlClient;provider connection string='Data Source=tcp:frickparkserver.database.windows.net,1433;Initial Catalog=TournamentDB;Persist Security Info=False;User ID=AdminUser;Password=burnt#end1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;MultipleActiveResultSets=True;App=EntityFramework'"
+         connectionString="metadata=res://*/Models.TournamentModel.csdl|res://*/Models.TournamentModel.ssdl|res://*/Models.TournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;Initial Catalog=Tournament;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
          providerName="System.Data.EntityClient" />
     <add name="elmah"
-         connectionString="Server=tcp:frickparkserver.database.windows.net,1433;Initial Catalog=TournamentDB;Persist Security Info=False;User ID=AdminUser;Password=burnt#end1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+         connectionString="data source=localhost;initial catalog=Tournament;integrated security=True" 
          providerName="System.Data.SQLClient" />
   </connectionStrings>
   <elmah>
