--- a/Tournament/Web.config
+++ b/Tournament/Web.config
@@ -16,6 +16,7 @@
   </configSections>
   <appSettings>
     <add key="smtp" value="smtp.ionos.com"/>
+    <add key="url" value="http://leagueapp.lawnbowlingpittsburgh.org"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
