added limit points

--- a/Tournament/Web.config
+++ b/Tournament/Web.config
@@ -143,7 +143,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="TournamentEntities" connectionString="metadata=res://*/Models.TournamentModel.csdl|res://*/Models.TournamentModel.ssdl|res://*/Models.TournamentModel.msl;provider=System.Data.SQlClient;provider connection string='Data Source=newdell;Initial Catalog=Tournament;Persist Security Info=False;User ID=AdminUser;Password=burnt#end1;MultipleActiveResultSets=False;Encrypt=false;TrustServerCertificate=False;Connection Timeout=30;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
+    <add name="TournamentEntities" connectionString="metadata=res://*/Models.TournamentModel.csdl|res://*/Models.TournamentModel.ssdl|res://*/Models.TournamentModel.msl;provider=System.Data.SQlClient;provider connection string='Data Source=newdell;Initial Catalog=Tournament;Persist Security Info=False;User ID=AdminUser;Password=burntend1;MultipleActiveResultSets=False;Encrypt=false;TrustServerCertificate=False;Connection Timeout=30;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
     <add name="elmah" connectionString="Server=newdell;Initial Catalog=Tournament;Persist Security Info=False;User ID=AdminUser;Password=burnt#end1;MultipleActiveResultSets=False;Encrypt=false;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SQLClient" />
   </connectionStrings>
   <elmah>
